<resources>
    <string name="app_name">Adesso Energy</string>
    <string name="not_implemented_message">OwO we didnt imwement this yet UwU</string>
    <string name="server_choose_text">Server wählen</string>
    <string name="login_text">Log in</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="new_input_title">Neue manuelle Eingabe</string>
    <string name="generic_error_message">Etwas ist falsch gelaufen, bitte versuche es nochmal.</string>
    <string name="new_input_messsage">Wie willst du deinen Zählerstand eintragen?</string>
    <string name="take_photo">Mache ein Foto</string>
    <string name="select_from_gallery">Wähle von deiner Gallerie</string>
    <string name="check_image">Bildüberprüfung</string>
    <string name="check_image_text">Ist das das richtige Bild?</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">Ok</string>
    <string name="check_data_text">Bitte überprüfe die gescannten Daten</string>
    <string name="meter_number">Zählernummer</string>
    <string name="usage">Verbrauch</string>
    <string name="logout_title">Logout?</string>
    <string name="logout_text">Willst du dich wirklich ausloggen?</string>
    <string name="number_hint">Kundennummer</string>
    <string name="wrong_login">Das eingegebene Passwort oder die Kundennummer ist falsch.</string>
    <string name="send_button">Senden</string>
    <string name="issue_textbox_name">Name</string>
    <string name="issue_textbox_email">Email</string>
    <string name="issue_textbox_subject">Betreff</string>
    <string name="issue_textbox_message">Nachricht</string>
    <string name="issue_toolbar_title">Kontakt</string>
    <string name="menu_main_logout">Log out</string>
    <string name="menu_main_choose_server_button">Server wählen</string>
    <string name="detail_toolbar_title">Zählerdetails</string>
    <string name="detail_edit_name_title">Zähler benennen</string>
    <string name="detail_edit_name_text">Gib dem Zähler einen Namen</string>
    <string name="listElementDesc">listElement</string>
    <string name="elecListTitle">Strom</string>
    <string name="elecUnit">kWh</string>
    <string name="gasListTitle">Gas</string>
    <string name="gasUnit">m³</string>
    <string name="water_list_title">Wasser</string>
    <string name="detail_list_dates_title">Datum</string>
    <string name="issue_send_successfully">Die Nachricht wurde erfolgreich übermittelt.</string>
    <string name="waterUnit">m³</string>
    <string name="detail_correct_dialog_title">Zählerstand korrigieren</string>
    <string name="detail_correct_dialog_desc">Bitte stelle sicher, dass du den richtigen Zählerstand korrekt abliest.</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="graph_toolbar_title">Verbrauchsentwicklung</string>
    <string name="graph_title">Verbrauch in </string>
    <string name="loading_text">Lade Daten...</string>
    <string name="mock_username">jd172</string>
    <string name="mock_password">password</string>
    <string name="graph_on_empty_readings">Zum Anzeigen des Graphs sind mindestens 2 Messstände notwendig</string>
</resources>
