<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/icon_hashtag" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:hint="@string/meter_number"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/icon_edit"
            android:backgroundTint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/usage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:hint="@string/usage"
            android:inputType="textPersonName" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/check_data_text"
        android:textAlignment="textStart" />

</LinearLayout>